fit: исправлены тесты под изменённое приложение, исправлены валидации в контроллерах